mfe-system-examples/home/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mfe-system-examples-home
  labels:
    app: mfe-system-examples-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mfe-system-examples-home
  template:
    metadata:
      labels:
        app: mfe-system-examples-home
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: mfe-system-examples-home
          image: mfe-system-examples-home # configure a proper registry
          imagePullPolicy: Never # configure a proper registry
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          args: []
